# autonomous-backend-architect

./: .env.example  .gitignore  README.md  pyproject.toml
src/: graph.py  main.py  state.py
src/nodes/: architect.py  developer.py  integration.py  reviewer.py  tdd_test.py
src/prompts/: architect_prompt.py  developer_prompt.py  reviewer_prompt.py  tdd_prompt.py
src/tools/: __init__.py  postgres_reference.py  search.py
src/ui/: app.py
src/utils/: code_parser.py  llm.py
tests/: test_architect_tools.py  test_code_parser.py  test_graph.py  test_integration.py  test_state.py  test_tdd_node.py  test_tools.py  test_ui.py
