[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-backend-architect"
version = "0.1.0"
description = "An agentic system that generates complete structured backends using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
search = [
    "langchain-community>=0.3.0",
    "tavily-python>=0.4.0",
]
ui = [
    "streamlit>=1.38.0",
]
groq = [
    "langchain-groq>=0.2.0",
]
all = [
    "autonomous-backend-architect[dev,search,ui,groq]",
]

[project.scripts]
architect = "src.main:main"
architect-ui = "src.ui.app:main"
